apps/vaultwarden/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  annotations:
    volsync.backube/privileged-movers: "true"
