apps/vaultwarden/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    external-dns.kubernetes.io/target: ingress.home.arpa
    external-dns.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/name: vaultwarden
    external-dns.invertedorigin.com/enabled: "true"
  name: vaultwarden
  namespace: vaultwarden
spec:
  ingressClassName: cilium
  rules:
  - host: bw.invertedorigin.com
    http:
      paths:
      - backend:
          service:
            name: vaultwarden
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - bw.invertedorigin.com
    secretName: vaultwarden-tls-domain
